deploy/kafka.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kafka-ns
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-hs
  namespace: kafka-ns
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: kafka
  ports:
    - name: kafka
      protocol: TCP
      port: 9092
      targetPort: 9092
    - name: controller
      protocol: TCP
      port: 9093
      targetPort: 9093
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka-ss
  namespace: kafka-ns
spec:
  serviceName: "kafka-hs"
  replicas: 3
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: apache/kafka:latest
          ports:
            - containerPort: 9092
              name: kafka
            - containerPort: 9093
              name: controller
          command: ["/bin/bash", "-c"]
          args:
            - |
              [...]
          volumeMounts:
            - name: kafka-data
              mountPath: /var/lib/kafka/data
            - name: kafka-volume
              mountPath: /config
      volumes:
        - name: kafka-volume
          configMap:
            name: kafka-conf
  volumeClaimTemplates:
    - metadata:
        name: kafka-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
