deploy/postgres.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postgres-ns
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-hs
  namespace: postgres-ns
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - name: tcp
      protocol: TCP
      port: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: postgres-ns
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-ss
  namespace: postgres-ns
spec:
  replicas: 1
  serviceName: "postgres-hs"
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      securityContext:
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
      resources:
        requests:
          cpu: "128m"
          memory: "128Mi"
        limits:
          cpu: "1"
          memory: "1Gi"
      containers:
        - name: postgres
          image: postgres:bookworm
          command:
            - "postgres"
            - "-c"
            - "config_file=/etc/postgresql/postgresql.conf"
            - "-c"
            - "hba_file=/etc/postgresql/pg_hba.conf"
          ports:
            - containerPort: 5432
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "postgres"]
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
            - name: postgres-volume
              mountPath: /etc/postgresql/
      volumes:
        - name: postgres-volume
          configMap:
            name: postgres-conf
            items:
              - key: postgresql.conf
                path: postgresql.conf
              - key: pg_hba.conf
                path: pg_hba.conf
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 1Gi
