deploy/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: cloud-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis/redis-stack-server:latest
          # args: ["redis-server", "/redis-stack.conf"]
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: 250m
              memory: "256M"
            limits:
              cpu: 500m
              memory: "512M"
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: cloud-ns
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
