deploy/redpanda.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redpanda-deployment
  namespace: cloud-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redpanda
  template:
    metadata:
      labels:
        app: redpanda
    spec:
      containers:
        - name: redpanda
          image: docker.redpanda.com/vectorized/redpanda:v24.2.8
          args:
            - redpanda
            - start
            - --overprovisioned
            - --smp=1
            - --memory=1G
            - --reserve-memory=0M
            - --node-id=0
            - --check=false
          ports:
            - containerPort: 9092
          resources:
            requests:
              cpu: 250m
              memory: "256M"
            limits:
              cpu: 500m
              memory: "512M"
---
apiVersion: v1
kind: Service
metadata:
  name: redpanda-service
  namespace: cloud-ns
spec:
  selector:
    app: redpanda
  ports:
    - name: kafka
      port: 9092
      targetPort: 9092
    - name: admin
      port: 9644
      targetPort: 9644
  type: ClusterIP
